Changes towards version 0.5:
- Text input is now available in languages other than English
  (UCS/Unicode; SDL does not support Unicode input on Windows yet;
  you must have proper font chars installed -- see translations) - Alex
- Re-added joystick text input (w/ Up/Down/PageUp/PageDown keys);
  joystick alphabet in content/lbm/joyalpha.txt (bug #495) - Alex
- Text input refactoring: enabled key repeat, added support for
  Home, End and BackSpace keys; (bugs #671, #815) - Alex
- Selecting the scan methods for shielded and gas giant planets
  is now allowed when using PC menus (bug #800) - Alex
- Added a unified credit roll combined with outtakes (bug #46) - Alex
- Setup menu selection doesn't reset when you quit a submenu now - Michael
- Split config.alwaysgl and config.usegl so that "Use Pure Mode If Possible"
  persists across runs even when using a GL mode - Michael
- Fixed Yehat Rebel left hand doubling up problem (bug #807) - Alex
- Fixed the problem with Melnorme stripping Chmmr bomb/crystal
  modules from the ship in a fuel deal (bug #803) - Alex
- Corrected baseline of 'j' in Micro font (bug #797) - Alex
- Fixed small VUX animation glitch (out of order frames; bug #808) - Alex
- CANCEL now behaves as expected in setup menu - Michael
- Only SELECT and CANCEL trigger the fade-to-black at the end of a
  Super Melee, solving the issue in bug #547 - Michael
- Admiral ZEX is no longer referred to as "Commander" or "Zex" (bug 
  #811) - Michael
- Keypress status is not reset when entering battle mode (solves
  bug #596) - Michael  
- Added the rest of devel/ and users/ documentation into MSVC .dsp
  files (bug #589) - Michael
- Fixed PNG transparency info (tRNS chunk) in all images according
  to info specified by .ani - Alex
- Comm animation fixes (bugs 557, 705, 806); from chmmravatar, Alex
- Imported DOS versions of alien comm graphics which have richer
  palettes and look better in most cases (bug #314) - Alex